<resources>
    <string name="app_name">Smarket</string>

    <!--Login-->
    <string name="username">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirmPassword">Confirmar Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="newAccount">Registrar usuario</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="registerUser">Registrar</string>
    <string name="invalidUsername">Usuario Invalido</string>
    <string name="invalidPassword">Password Invalido</string>
    <string name="incorrectUsernameOrPassword">Usuario o Contraseña Incorrecta</string>

    <!--Order-->
    <string name="summary">Resumen</string>
    <string name="totalPrice">Total : $</string>
    <string name="seeShoppingCart">Ver Carrito</string>
    <string name="card">Tarjeta</string>
    <string name="contact">Contacto</string>
    <string name="finishOrder">Finalizar Pedido</string>

    <!--History History-->
    <string name="price">Precio</string>
    <string name="purchase">Producto</string>
    <string name="amount">Cantidad :</string>
    <string name="actions">Acciones</string>
    <string name="noPurchases"> No tenes compras!! Hacé click en el botón con este ícono para comenzar</string>
    <string name="repeat">REPETIR</string>
    <string name="cardDueDate">Fecha de Vencimiento</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_finished">Finalizado</string>
    <string name="status_on_route">En Camino</string>
    <string name="qualify">Calificar</string>

    <!--Add Purchase-->
    <string name="detailProduct">Detalle del Producto</string>
    <string name="unitaryPrice">Precio por Unidad : $</string>
    <string name="unitsToBuy">Unidades a Llevar</string>
    <string name="total">TOTAL: $</string>
    <string name="ok">Continua</string>
    <string name="cancel">Cancelar</string>

    <!--Product List-->
    <string name="perUnitSymbol">/u</string>

    <!--Map-->
    <string name="title_activity_maps">Mi Ubicación</string>
    <string name="titleDirectionSearch">BUSCAR</string>
    <string name="titleConfirmLocation">CONFIRMAR</string>
    <string name="titleCalleYAltura">Calle y Altura</string>

    <!--Order-->
    <string name="finishPurchase">FINALIZAR COMPRA</string>
    <string name="cardNumber">Número de Tarjeta</string>
    <string name="cardTitular">Nombre Completo</string>
    <string name="cardSecurityCode">Código de Seguridad</string>
    <string name="contactName">Nombre</string>
    <string name="contactNumber">Teléfono</string>
    <string name="numberPrefix">(+54) 11   </string>
    <string name="location">Ubicación</string>
    <string name="newLocation">Nueva ubicación</string>
    <string name="productNotFound">No se encontró el producto</string>

    <!--Location-->
    <string name="delete">ELIMINAR</string>
    <string name="returnHistory">Mis Compras</string>
</resources>
