<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NewAccountActivity"
    android:layout_marginTop="60dp"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        android:textSize="25sp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUserController"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="90dp"
        app:counterMaxLength="50"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/icon_key"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="Debe tener al menos seis (6) caracteres">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="19"
            android:singleLine="true"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:counterMaxLength="50"
        app:startIconDrawable="@drawable/icon_key"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="19"
            android:singleLine="true"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateUser"
        android:layout_marginTop="10dp"
        style="@style/SmarketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUser"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>